syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "ghost-codes/waste-bin/pb";


message UserDetails{
    string uid = 1;
    string full_name = 3;
    string location = 4;
    google.protobuf.Timestamp createdAt = 5;
}